@@ -1,3 +1,8 @@
+2019-10-22  Marc Glisse  <marc.glisse@inria.fr>
+
+	PR c++/85746
+	* g++.dg/pr85746.C: New file.
+
 2019-10-22  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/92173
