@@ -1,3 +1,9 @@
+2019-10-22  Marc Glisse  <marc.glisse@inria.fr>
+
+	PR c++/85746
+	* constexpr.c (cxx_eval_builtin_function_call): Only set
+	force_folding_builtin_constant_p if manifestly_const_eval.
+
 2019-10-22  Richard Sandiford  <richard.sandiford@arm.com>
 
 	* cp-tree.h (STF_USER_VISIBLE): New constant.
